declare_args() {
  # Whether to use a custom message loop.
  # If false, the platform’s default implementation will be used.
  use_custom_message_loop = false

  # Controls the symbol visibility of the lynx base library.
  # If true, symbols decorated with `BASE_EXPORT` are exported.
  # Otherwise, no symbols from this library are exported.
  base_export_symbols = true
}
