# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/config/win/win.gni")
import("../../core/Lynx.gni")

shared_library("windows") {
  output_name = "lynx"

  deps = [
    "../../base/src:base_static",
    "../../clay/lynx_adaptor:lynx_adaptor",
    "../../clay/shell/platform/embedder:embedder",
    "../../clay/shell/platform/windows:flutter_windows_source",
    "../embedder:embedder",
    "common:common",
  ]
  if (enable_napi_binding) {
    deps += [
      "../../core/runtime/bindings/napi:napi_binding_quickjs",
      "../../third_party/napi:env",
      "../../third_party/napi:quickjs",
      "../../third_party/quickjs",
    ]
  }

  libs = [ "user32.lib" ]

  if (use_flutter_cxx) {
    if (windows_runtime_library_mode == "md") {
      libs += [ "msvcprt.lib" ]
    } else if (windows_runtime_library_mode == "mt") {
      libs += [ "libcpmt.lib" ]
    }
  }
}
