# Copyright 2021 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

assert(is_ios)

import("../../../core/Lynx.gni")

group("iOS") {
  deps = [
    "../../../base/platform/darwin:lynx_base_podspec",
    "lynx:lynx_podspec",
  ]
}
