# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../config.gni")
import("../../../core/Lynx.gni")
import("../../../devtool/lynx_devtool/devtool.gni")

config("lynx_devtool_config") {
  include_dirs = [ "../../../third_party/debug_router/src/" ]
}

devtool_source_set("lynx_devtool") {
  sources = [
    "devtool_env_embedder.cc",
    "devtool_env_embedder.h",
    "env_embedder.cc",
  ]

  deps = [
    "../:devtool_settings_embedder",
    "../../../devtool/base_devtool/common:base_devtool_common_sources",
    "../../../devtool/embedder/common:lynx_devtool_embedder_common",
    "../../../devtool/embedder/core:lynx_devtool_embedder_core",
    "../../../devtool/lynx_devtool:lynx_devtool_group",
    "../../../devtool/lynx_devtool/js_debug",
    "../../../devtool/lynx_devtool/tracing",
    "../../../third_party/debug_router/src/debug_router/common:debug_router_source",
    "../../../third_party/jsoncpp:jsoncpp",
    "//third_party/modp_b64:modp_b64",
  ]
  public_configs = [ ":lynx_devtool_config" ]
}

devtool_source_set("lynx_devtool_logbox") {
  sources = [
    "logbox/logbox_resource_provider.h",
    "logbox/lynx_logbox_bridge.h",
    "logbox/lynx_logbox_wrapper_embedder.cc",
    "logbox/lynx_logbox_wrapper_embedder.h",
  ]

  deps = []
  if (!enable_unittests) {
    if (is_mac && !is_oliver_node_lynx) {
      sources += [
        "../../darwin/macos/lynx_devtool/lynx_logbox_bridge_darwin.h",
        "../../darwin/macos/lynx_devtool/lynx_logbox_bridge_darwin.mm",
      ]
      deps += [ "../../../devtool/base_devtool/darwin/ios:logbox_source" ]
    } else if (is_win) {
      sources += [ "../../windows/lynx_devtool/lynx_logbox_bridge_win.cc" ]
      deps += [ "../../../devtool/base_devtool/logbox:logbox" ]
    } else {
      sources += [ "logbox/lynx_logbox_bridge_mock.cc" ]
    }
  } else {
    sources += [ "logbox/lynx_logbox_bridge_mock.cc" ]
  }
  public_configs = [ ":lynx_devtool_config" ]
}
