# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("../../../core/Lynx.gni")

assert(enable_napi_binding)

lynx_core_source_set("module") {
  sources = [
    "extension_module_factory_impl.cc",
    "extension_module_factory_impl.h",
    "global_module_registry.cc",
    "global_module_registry.h",
    "lynx_extension_module.cc",
    "lynx_extension_module_priv.h",
    "lynx_fetch_module.cc",
    "lynx_fetch_module.h",
    "lynx_module_factory_napi.cc",
    "lynx_module_factory_napi.h",
    "lynx_module_manager_napi.cc",
    "lynx_module_manager_napi.h",
    "lynx_native_module_napi.cc",
    "lynx_native_module_napi.h",
  ]
  deps = [ "../../../third_party/napi:env" ]
}
