# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../core/Lynx.gni")

lynx_core_source_set("common") {
  sources = [
    "lynx_ui_renderer_win.cc",
    "lynx_ui_renderer_win.h",
  ]

  configs = [ "../../../clay:config" ]

  deps = [
    "../../../clay/shell/platform/windows:flutter_windows_source",
    "../../../clay/ui:ui",
    "../../embedder:embedder",
  ]
}
