# Copyright 2022 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../testing/test.gni")
import("../../../Lynx.gni")

air_shared_sources = [ "lynx_air_parsed_style_store.h" ]

lynx_core_source_set("tasm_air") {
  sources = air_shared_sources
}

mocktest_exec("air_runtime_mockset_exec") {
  sources = [ "testing/air_lepus_context_mock.h" ]
  public_configs = [ "../../../:lynx_public_config" ]
}
