# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../../testing/test.gni")
import("../../../../Lynx.gni")

# runtime_common_shared_sources
runtime_common_shared_sources = [
  "context_proxy.cc",
  "context_proxy.h",
  "message_event.cc",
  "message_event.h",
  "runtime_constants.h",
]

lynx_core_source_set("runtime_common") {
  sources = runtime_common_shared_sources

  # The runtime_common is expected to only depend on the lepus::Value, base and event module, but lepus::Value is still strongly coupled with context now. In the future, if there is a common::Value, it will depend on common::Value rather than lepus::Value.
  public_deps = [ "../../../../event" ]
}

unittest_set("runtime_common_testset") {
  sources = [
    "context_proxy_test.cc",
    "context_proxy_test.h",
    "message_event_test.cc",
    "message_event_test.h",
  ]
  public_deps = [
    ":runtime_common",
    "../../..:runtime",
    "../../../../../third_party/quickjs",
    "../../../../base",
    "../../../../event",
    "../../../../event:event_testset",
    "../../../../renderer:tasm",
    "../../../../renderer/dom:dom",
    "../../../../renderer/dom:renderer_dom",
    "../../../../renderer/starlight",
    "../../../../shell/testing:mock_tasm_delegate_testset",
    "../../../lepus_context:lepus",
  ]
  data_deps = []
}

unittest_exec("runtime_common_unittests_exec") {
  sources = []
  deps = [ ":runtime_common_testset" ]
}

group("runtime_common_tests") {
  testonly = true
  deps = [ ":runtime_common_unittests_exec" ]
}
