# Copyright 2021 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../../../config.gni")
import("sources_list.gni")

subspec_target("Public") {
  sources = common_lynx_public_headers
  public_header_files = common_lynx_public_headers
}
